add museum 640px image

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
   <header class="header">
+
     <div class="title">
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
+
+    <img src="images/museum-640 px.jpg" alt="museum-640px ">
 
   </header>
 </body>
