--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <h4>My Really Cool Blog Post</h4>
     </div>
 
-    <img src="images/museum-640 px.jpg" alt="museum-640px ">
+    <img src="images/museum-640 px.jpg 640w,               
+
 
   </header>
 </body>
