add different sizes images

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
       <h4>My Really Cool Blog Post</h4>
     </div>
 
-    <img src="images/museum-640 px.jpg 640w,               
-
+    <img src="images/museum-640 px.jpg" alt="museum-640px 
+    images/museum-900 px.jpg 900w,
+    images/museum-1200 px.jpg 1200w" alt="museum"
+    >
+    
 
   </header>
 </body>
